--- a/scrapy_opium/cloudbuild.yaml
+++ b/scrapy_opium/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/perfect-period-295613/scrapy_opium', '.']
+  args: ['build', '-t', 'gcr.io/perfect-period-295613/scrapy_opium', 'scrapy_opium']
   timeout: 2000s
 timeout: 2000s
